# gribot_ros

./: .clang-format  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  package.xml
config/: base_local_planner_params.yaml  can0.yaml  common_costmap_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
config/move_base/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
gribot/: CMakeLists.txt  CONTRIBUTING.md  README.md
gribot/launch/: gribot.launch
gribot/rviz/: urdf.rviz
gribot/src/: teleopjoy.cpp  tf_broadcaster.cpp
gribot/urdf/: gribot.xacro  wheel.urdf.xacro
gribot_control/: CMakeLists.txt  package.xml
gribot_control/config/: can.yaml  control.yaml  ekf_params.yaml  keya.eds  left_side_teleop_F710.yaml  localization.yaml  navsat_params_sim.yaml  right_side_teleop_F710.yaml  teleop_F710.yaml  twist_mux.yaml
gribot_control/launch/: const_drive.launch  control.launch  localization_run.launch  simple_drive.launch  socket_can_to_topic.launch  teleop.launch  testing_manual_drive.launch  testing_subs_values.launch  topic_to_socket_can.launch
gribot_description/: CMakeLists.txt  package.xml
gribot_gazebo/: CMakeLists.txt  package.xml
gribot_navigation/: CMakeLists.txt  package.xml
gribot_viz/: CMakeLists.txt  package.xml
launch/: gribot.launch
outdoor_waypoint_nav/: CMakeLists.txt  package.xml
outdoor_waypoint_nav/launch/: bag_data.launch  gribot_start.launch  gribot_start_config.sh  imu_testing.launch
outdoor_waypoint_nav/launch/include/: collect_goals_sim.launch  gps_imu.launch  laser.launch  localization_run.launch  send_goals_sim.launch
outdoor_waypoint_nav/launch/simulation/: joy_launch_control_sim.launch
outdoor_waypoint_nav/params/: bounding_box_filter.yaml  navsat_params_sim.yaml  pid_gains.yaml
outdoor_waypoint_nav/scripts/: joy_launch_control.py
outdoor_waypoint_nav/src/: collect_gps_waypoints.cpp  gps_waypoint.cpp
outdoor_waypoint_nav/waypoint_files/: points_sim.txt
scripts/: init_can
src/: teleopjoy.cpp  tf_broadcaster.cpp
urdf/: gazebo_gps.xacro  gribot.urdf  gribot.urdf.ori  gribot.xacro  urdf.rviz  wheel.urdf.xacro
(+60 files in other folders)
